--- a/package.json
+++ b/package.json
@@ -1,59 +1,27 @@
 {
-  "name": "tomorrow-dubai",
-  "version": "0.1.0",
-  "private": true,
+  "name": "SellAnyHome_BE",
+  "version": "1.0.0",
+  "description": "This is Backend for SellAnyHome",
+  "main": "index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "pooja tomar",
+  "license": "ISC",
   "dependencies": {
-    "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^10.7.1",
-    "autoprefixer": "^10",
-    "axios": "^1.6.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "core-js": "^3.8.3",
-    "postcss": "^8",
-    "radix-vue": "^1.2.5",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3",
-    "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.2.13",
-    "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-tailwind": "~3.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {
-      "vue/multi-word-component-names": "off"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "axios": "^1.3.6",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "haversine": "^1.1.1",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
+    "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
+  }
 }
