--- a/admin/package.json
+++ b/admin/package.json
@@ -36,7 +36,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "local-build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider --max-old-space-size=2048 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
