--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
+    "nuxt-gtag": "^1.2.0",
     "shadcn-nuxt": "^0.9.0"
   }
 }
