--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "dotenv": "^16.0.3",
@@ -25,6 +26,7 @@
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "vue-router-tiny-sitemap": "^7.0.2",
     "xml": "^1.0.1",
     "xmlbuilder2": "^3.1.1"
