--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "file-saver": "^2.0.5",
     "haversine": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "nodemailer": "^6.9.3",
@@ -28,6 +29,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "vue-router-tiny-sitemap": "^7.0.2",
+    "vue3-cookies": "^1.0.6",
     "xml": "^1.0.1",
     "xmlbuilder2": "^3.1.1"
   },
