--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "vue-awesome-paginate": "^1.1.46",
     "vue-router-tiny-sitemap": "^7.0.2",
     "vue3-cookies": "^1.0.6",
     "xml": "^1.0.1",
