--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -24,7 +24,7 @@
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.13",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "radix-vue": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3",
@@ -40,6 +40,7 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
     "nuxt-gtag": "^1.2.0",
+    "sass": "^1.77.2",
     "shadcn-nuxt": "^0.9.0"
   }
 }
