--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -37,6 +37,7 @@
     "vuex": "next"
   },
   "devDependencies": {
+    "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
     "nuxt-gtag": "^1.2.0",
