--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.3",
     "haversine": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.3.0",
@@ -28,6 +29,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "tinify": "^1.7.1",
     "vue-awesome-paginate": "^1.1.46",
     "vue-router-tiny-sitemap": "^7.0.2",
     "vue3-cookies": "^1.0.6",
